--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -1,3 +1,10 @@
+body{
+  max-width: 1920px;
+  margin: 0 auto;
+  position: relative;
+  min-width: 1200px;
+}
+
 .empty-wrap{ // 구성요소: 컨텐츠 없을 때 스타일
   text-align: center;
 
