jhj FIXME SCSS 주석 수정

--- a/src/assets/styles/component/_board.scss
+++ b/src/assets/styles/component/_board.scss
@@ -73,7 +73,7 @@
   padding: 26px 40px;
 
   &:hover{
-    // FIXME: 모바일일 때 제외해야할 수도
+    // FIXME: 모바일일 때 hover효과 막아야할 수도 있음
     background-color: #F6FFFB;
     cursor: pointer;
   }
