--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -87,7 +87,7 @@ body{
     color: #8E909F;
 
     &:hover{
-      // FIXME 모바일에선 수정해야할 수도
+      // FIXME: 모바일일 때 hover효과 막아야할 수도 있음
       background-color: #ebebed;
     }
 
