--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -36,10 +36,11 @@
 @import "page/main";
 @import "page/search-result";
 @import "page/etpr-profile"; // 기업 프로필
-@import "page/_mypage-dashboard"; // 내 정보
-@import "page/_mypage-my-info"; // 내 정보
+@import "page/mypage-dashboard"; // 대시보드
+@import "page/mypage-my-info"; // 내 정보
 @import "page/mypage-enterprise-info"; // 기업 정보
 @import "page/mypage-factcheck"; // 팩트체크
+@import "page/mypage-factcheck-gs"; // 관수 작업 파일: 작업완료 후 팩트체크에 병합 예정
 @import "page/mypage-point"; // 포인트
 @import "page/mypage-note"; // 쪽지함
 @import "page/mypage-portfolio"; // 포트폴리오
