cgs - right-fixed 추가 수정

--- a/src/assets/styles/page/_mypage-factcheck-gs.scss
+++ b/src/assets/styles/page/_mypage-factcheck-gs.scss
@@ -12,8 +12,11 @@
 }
 
 .ftck-edit-wrap {
-  padding: 0 40px 40px 40px;
   background-color: #fff;
+}
+
+.ftck-edit-wrap {
+  padding: 0 40px 40px 40px;
 
   .req-hgrp {
     margin-bottom: 20px;
