--- a/src/assets/styles/page/_mypage-enterprise-info.scss
+++ b/src/assets/styles/page/_mypage-enterprise-info.scss
@@ -1,6 +1,19 @@
 /* ========== 마이페이지 > 기업정보 ========== */
 
 // 마이 페이지 > 기본정보(스타트업)
+.mypage-default-info-container {
+  
+  .mypage-cont-wrap {
+    max-width: 947px;
+  }
+}
+
+.mypage-detail-info-container {
+  .mypage-cont-wrap {
+    max-width: 947px;
+  }
+}
+
 .article-wrap {
   border-bottom: 1px solid #DDDEE6;
   padding: 30px 0;
