jhj 투자자, 팩트체커 검토중팩트체크 상세 - 이미지 자세히 보기 팝업 설치완료

--- a/src/assets/styles/layout/_modal.scss
+++ b/src/assets/styles/layout/_modal.scss
@@ -50,6 +50,34 @@
   &.modal-wide{
     max-width: 390px;
   }
+
+  &.modal-detail-img{
+    @include custom-scroll($c: #00eb79);
+
+    max-width: 70%;
+    max-height: 90vh;
+    margin: 0 auto;
+    overflow: auto;
+
+    .close-btn{
+      @include absolute($t: 15px, $r: 15px);
+      
+      z-index: 5;
+    }
+
+    .img-box{
+      max-width: 100%;
+    }
+
+    .img-box-figure{
+      padding-top: 0;
+    }
+
+    .img-input{
+      position: relative;
+      height: auto;
+    }
+  }
 }
 
 .modal-wrapper.is-show {
