--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -213,4 +213,16 @@
   background-image: url("data:image/svg+xml,%3Csvg id='icon-point' xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18'%3E%3Ccircle id='타원_374' data-name='타원 374' cx='9' cy='9' r='9' fill='%23171820'/%3E%3Cpath id='패스_6880' data-name='패스 6880' d='M683.487,379.706h-3.658v9.5h2.108v-3.381h1.55c2.253,0,3.6-1.143,3.6-3.059S685.74,379.706,683.487,379.706Zm1.49,3.06c0,.764-.543,1.2-1.49,1.2h-1.55v-2.4h1.551a1.607,1.607,0,0,1,1.179.381A1.124,1.124,0,0,1,684.977,382.766Z' transform='translate(-673.578 -375.457)' fill='%2353ff81'/%3E%3C/svg%3E%0A");
 }
 
+.icon-zoom{
+  width: 42px;
+  height: 42px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='42' height='42' viewBox='0 0 42 42'%3E%3Cg id='icon-expan' transform='translate(-885 -677)'%3E%3Crect id='사각형_2331' data-name='사각형 2331' width='42' height='42' transform='translate(885 677)' fill='%23171820' opacity='0.5'/%3E%3Cg id='그룹_6394' data-name='그룹 6394'%3E%3Cg id='그룹_6391' data-name='그룹 6391' transform='translate(0 -1)'%3E%3Cpath id='합치기_3' data-name='합치기 3' d='M-5549-12822v-8h8v1h-7v7Z' transform='translate(6442 13516)' fill='%23fff'/%3E%3Cpath id='합치기_4' data-name='합치기 4' d='M-5542-12822v-7h-7v-1h8v8Z' transform='translate(6460 13516)' fill='%23fff'/%3E%3Cpath id='합치기_6' data-name='합치기 6' d='M-5548-12822h-1v-8h1v7h7v1Z' transform='translate(6442 13534)' fill='%23fff'/%3E%3Cpath id='합치기_5' data-name='합치기 5' d='M-5542-12822h-7v-1h7v-7h1v8Z' transform='translate(6460 13534)' fill='%23fff'/%3E%3C/g%3E%3Cg id='그룹_6393' data-name='그룹 6393' transform='translate(2 2)'%3E%3Cg id='타원_378' data-name='타원 378' transform='translate(898 690)' fill='none' stroke='%23fff' stroke-width='1.5'%3E%3Ccircle cx='5' cy='5' r='5' stroke='none'/%3E%3Ccircle cx='5' cy='5' r='4.25' fill='none'/%3E%3C/g%3E%3Cline id='선_1057' data-name='선 1057' x2='3' y2='3' transform='translate(906.5 698.5)' fill='none' stroke='%23fff' stroke-width='1.5'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
+.icon-close-shadow{
+  width: 43px;
+  height: 43px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='42.749' height='42.749' viewBox='0 0 42.749 42.749'%3E%3Cdefs%3E%3Cfilter id='합치기_7' x='0' y='0' width='42.749' height='42.749' filterUnits='userSpaceOnUse'%3E%3CfeOffset input='SourceAlpha'/%3E%3CfeGaussianBlur stdDeviation='3' result='blur'/%3E%3CfeFlood flood-opacity='0.302'/%3E%3CfeComposite operator='in' in2='blur'/%3E%3CfeComposite in='SourceGraphic'/%3E%3C/filter%3E%3C/defs%3E%3Cg id='btn-expan-x' transform='translate(-1298.626 -280.626)'%3E%3Crect id='사각형_2337' data-name='사각형 2337' width='30' height='30' transform='translate(1305 287)' fill='%23fff' opacity='0'/%3E%3Cg id='그룹_6396' data-name='그룹 6396' transform='translate(-126.375 -112.999)'%3E%3Cg transform='matrix(1, 0, 0, 1, 1425, 393.63)' filter='url(%23합치기_7)'%3E%3Cpath id='합치기_7-2' data-name='합치기 7' d='M-10234.627-12524.091l-8.838,8.839-3.534-3.534,8.838-8.839-8.838-8.838,3.534-3.538,8.84,8.84,8.838-8.84,3.534,3.534-8.838,8.84,8.841,8.841-3.537,3.534Z' transform='translate(10256 12549)' fill='%23fff'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
 /* ========== END icon 관련 스타일 ========== */
