--- a/src/assets/styles/page/_etpr-profile.scss
+++ b/src/assets/styles/page/_etpr-profile.scss
@@ -469,6 +469,10 @@
 .etpr-prifile-page {
   background-color: #F9F9FB;
 
+  .hover-desc-box{
+    min-width: 180px;
+  }
+
   .page-container {
     position: relative;
     padding-top: 40px;
@@ -476,7 +480,7 @@
 
   .wide-panel {
     position: relative;
-    z-index: 5;
+    // z-index: 5;
   }
 
   .section-ttl {
@@ -487,7 +491,7 @@
     position: relative;
     margin-top: 60px;
     margin-bottom: 30px;
-    font-size: rem(25);
+    font-size: 25px;
     font-weight: 600;
     color: #171820;
 
@@ -515,6 +519,11 @@
     + .flexable-container {
         padding-top: 0;
       }
+  }
+  
+  .section-ttl.section-ttl-verti{
+    @include flex-col;
+    @include flex-op(flex-start, flex-start);
   }
 
   .badge {
