--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -3,6 +3,10 @@ body{
   margin: 0 auto;
   position: relative;
   min-width: 1250px;
+
+  @include media(980px){
+    min-width: auto;
+  }
 }
 
 .empty-wrap{ // 구성요소: 컨텐츠 없을 때 스타일
