--- a/src/assets/styles/page/_etpr-profile.scss
+++ b/src/assets/styles/page/_etpr-profile.scss
@@ -721,6 +721,7 @@
       font-size: rem(12);
       font-weight: 400;
       color: #5C5E70;
+      flex-shrink: 0;
     }
 
     .bold {
@@ -729,6 +730,10 @@
       font-weight: 600;
       color: #171820;
       -webkit-text-stroke: 0.2px #171820;
+    }
+
+    .inp-grp{
+      margin-top: 0;
     }
   }
 
