--- a/src/assets/styles/component/_button.scss
+++ b/src/assets/styles/component/_button.scss
@@ -601,6 +601,26 @@
   padding: 0 5px;
 }
 
+.badge-sm-square{
+  display: inline-block;
+  padding: 6px 8px;
+  border: 1px solid #5C5E70;
+  background-color: #8E909F;
+  font-size: rem(12);
+  font-weight: 400;
+  color: white;
+
+  &.yellow {
+    border-color: #FF9900;
+    background-color: #FFB300;
+  }
+
+  &.green {
+    border-color: #009A75;
+    background-color: #00BF92;
+  }
+}
+
 .toggle-onoff{ // 구성요소: 토글 스타일
   background-color: #8E909F;
   display: inline-block;
