jhj 마이페이지 어트리뷰트로 스타일링 일괄 통일

--- a/src/assets/styles/page/_mypage-enroll.scss
+++ b/src/assets/styles/page/_mypage-enroll.scss
@@ -1,8 +1,7 @@
 /* ========== 마이페이지 > 기업회원 등록 ========== */
 
 // 기업회원 등록
-.mypage-enroll-container {
-
+[mypage="enroll-page"] {
   .select-guide-box {
     display: flex;
     justify-content: space-between;
