--- a/src/assets/styles/page/_mypage-factcheck-gs.scss
+++ b/src/assets/styles/page/_mypage-factcheck-gs.scss
@@ -1,7 +1,7 @@
 /* ========== 마이페이지 > 팩트체크 ========== */
 
 // 마이페이지 > 요청한 팩트체크 > 팩트체크 상세 > 수정하기
-.ftck-edit-container {
+[mypage="ftck-edit-page"] {
   
   .big-ttl {
     font-size: rem(18);
