--- a/src/assets/styles/page/_mypage-note.scss
+++ b/src/assets/styles/page/_mypage-note.scss
@@ -1,6 +1,6 @@
 /* ========== 마이페이지 > 쪽지함 ========== */
 
-.mypage-note-list-page{ // 구성요소 - 쪽지함 페이지
+[mypage="note-list-page"]{ // 구성요소 - 쪽지함 페이지
   .page-inp-grp{
     margin-bottom: 15px;
     max-width: 360px;
