--- a/src/assets/styles/page/_mypage-factcheck.scss
+++ b/src/assets/styles/page/_mypage-factcheck.scss
@@ -1,7 +1,7 @@
 /* ========== 마이페이지 > 팩트체크 ========== */
 
 /* 마이페이지 > 팩트체크 > 팩트체커 신청 > 신청서 작성 */
-.mypage-ftck-apply-create-page{
+[mypage="ftck-apply-create-page"]{
   .ftck-auth-form-area{
     max-width: 380px;
     margin: 0 auto;
@@ -10,10 +10,6 @@
       margin-top: 60px;
     }
   }
-}
-
-/* 마이페이지 > 팩트체크 > 팩트체커 신청 > 신청서 작성완료 */
-.mypage-ftck-apply-complete-page{
 }
 
 /* 마이페이지 > 팩트체크 > 팩트체크 리스트 */
@@ -150,8 +146,8 @@
   }
 }
 
-/* 투자자: 마이페이지 > 팩트체크 > 요청한 팩트체크 */
-.mypage-i-ftck-list-page{
+/* 마이페이지 > 팩트체크 > 팩트체크 목록 */
+[mypage="ftck-list-page"]{
   .page-inp-grp{
     max-width: 360px;
     margin-bottom: 25px;
@@ -267,7 +263,7 @@
 }
 
 /* 투자자: 마이페이지 > 팩트체크 > 요청한 팩트체크 상세 (검토중, 완료) */
-.mypage-ftck-checking-detail-page{
+[mypage="ftck-checking-detail-page"]{
   .mypboard-cont{
     &:last-of-type{
       border-bottom: 0;
@@ -281,7 +277,7 @@
 
 /* 투자자: 마이페이지 > 팩트체크 > 요청한 팩트체크 보완요청 */
 /* 팩트체커: 마이페이지 > 팩트체크 > 나의 팩트체크 상세 (검토중&완료) */
-.mypage-ftck-checking-edit-page{
+[mypage="ftck-checking-edit-page"]{
   .ftck-caution-box{
     margin-bottom: 10px;
   }
@@ -297,7 +293,7 @@
 }
 
 /* 팩트체커: 마이페이지 > 팩트체크 > 나의 팩트체크 상세 (진행중) */
-.mypage-ftck-my-detail-page{
+[mypage="ftck-my-detail-page"]{
   .mypboard-cont{
     &:last-of-type{
       border-bottom: 0;
@@ -306,7 +302,7 @@
 }
 
 /* 팩트체커: 마이페이지 > 팩트체크 > 전체 팩트체크 상세 */
-.mypage-ftck-total-detail-page{
+[mypage="ftck-total-detail-page"]{
   .mypboard-cont{
     &:last-of-type{
       border-bottom: 0;
@@ -319,7 +315,7 @@
 }
 
 /* 팩트체커: 마이페이지 > 팩트체크 > 팩트체크 작성 */
-.mypage-ftck-create-page{
+[mypage="ftck-create-page"]{
   .mypage-ftck-container{
     margin: 10px 0;
   }
