cgs - 기업프로필정보 테이블표 추가

--- a/src/assets/styles/page/_etpr-profile.scss
+++ b/src/assets/styles/page/_etpr-profile.scss
@@ -943,3 +943,12 @@
   transform: translateY(2px);
   cursor: pointer;
 }
+
+
+// 테이블표 관련 css 추가
+.common-info-graph {
+
+  .table-all-wrap {
+    padding: 0;
+  }
+}
