--- a/src/assets/styles/page/_mypage-factcheck-gs.scss
+++ b/src/assets/styles/page/_mypage-factcheck-gs.scss
@@ -185,6 +185,7 @@
   .req-info-grp {
     padding: 40px 0 60px;
     border-bottom: 1px solid #DDDEE6;
+    // border: 1px solid #000;
   }
 
   .req-cont-grp {
