--- a/src/assets/styles/page/_etpr-profile.scss
+++ b/src/assets/styles/page/_etpr-profile.scss
@@ -225,7 +225,7 @@
 .etpr-panel-wrap {
   .white-panel {
     // - panel-title - bot-txt
-    height: calc(100% - 40px - 27px);
+    // min-height: calc(100% - 40px - 27px);
     padding: 40px;
   }
 
