jhj 기업프로필쪽 마진 여백 수정

--- a/src/assets/styles/page/_etpr-profile.scss
+++ b/src/assets/styles/page/_etpr-profile.scss
@@ -168,6 +168,15 @@
     .btn-bd-blue {
       box-shadow: none;
     }
+    
+    .fav-btn{
+      font-size: 16px;
+
+      .icon{
+        margin-right: 6px;
+        margin-top: -1px;
+      }
+    }
   }
 }
 
