--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -1119,5 +1119,119 @@ body{
 }
 
 .custom-colchart-wrap{ // 구성요소: 추이 그래프 커스텀
+  @include flex-col;
+  @include flex-op(flex-end, flex-end);
+
   position: relative;
+  width: 100%;
+  height: 100%;
+
+  .custom-colchart{
+    position: relative;
+    width: 100%;
+  }
+
+  .axis-grp{
+    @include flex;
+
+    width: 100%;
+    height: 100%;
+  }
+  
+  .axis-list{
+    flex: 1 1 auto;
+    text-align: center;
+  }
+
+  .axis-grp.yaxis{
+    width: 100%;
+    height: 150px;
+
+    .axis-list{
+      @include flex-col;
+      @include flex-op(center, flex-end);
+
+      height: 100%;
+    }
+  }
+
+  .axis-grp.xaxis{
+    width: 100%;
+    height: 45px;
+    border-top: 1px solid #DDDEE6;
+
+    font-size: 12px;
+    font-weight: 500;
+    color: #5C5E70;
+    padding-top: 15px;
+  }
+
+  .grph-column{
+    width: 35px;
+    position: relative;
+  }
+
+  .data-labels{
+    @include absolute($t: -53px);
+    @include flex-col;
+    @include flex-op(center, flex-end);
+
+    left: 50%;
+    transform: translateX(-50%);
+    height: 45px;
+
+    .txt-data{
+      margin-top: 10px;
+    }
+  }
+
+  .txt-data{
+    display: inline-block;
+    font-size: 11px;
+    white-space: nowrap;
+    color: #5C5E70;
+  }
+
+  .txt-percent{
+    display: inline-block;
+    min-width: 48px;
+    background-color: #5C5E70;
+    padding: 3.5px 5px 3px;
+    border-radius: 5px;
+    color: white;
+    font-size: 12px;
+    font-weight: 600;
+    position: relative;
+
+    & ~ .txt-data{
+      color: #171820;
+      font-weight: 500;
+    }
+
+    @include make-after{
+      @include absolute($b: -9px, $l: 50%);
+
+      transform: translateX(-50%);
+      width: 0;
+      height: 0;
+      border-bottom: 5px solid transparent;
+      border-left: 5px solid transparent;
+      border-top: 5px solid #5C5E70;
+      border-right: 5px solid transparent;
+    }
+
+    &.color-red{
+      background-color: #FF5175;
+      &:after{
+        border-top-color: #FF5175;
+      }
+    }
+
+    &.color-blue{
+      background-color: #3060FF;
+      &:after{
+        border-top-color: #3060ff;
+      }
+    }
+  }
 }
