cgs - etpr-profile-info 더미데이터 구조 변경

--- a/src/assets/styles/page/_etpr-profile.scss
+++ b/src/assets/styles/page/_etpr-profile.scss
@@ -456,12 +456,25 @@
   }
 }
 
-.cover-blur {
+// .cover-blur {
+//   .cover-blur-container {
+//     display: block;
+//   }
+
+//   .common-info-container {
+//     filter: blur(10px);
+//     user-select: none;
+//   }
+// }
+
+.is-blur {
+  position: relative;
+
   .cover-blur-container {
     display: block;
   }
 
-  .common-info-container {
+  .blur-filter-container {
     filter: blur(10px);
     user-select: none;
   }
