key 오른쪽 픽스드컨텐츠

--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -20,6 +20,7 @@
 @import "component/form";
 @import "component/board";
 @import "component/loader";
+@import "component/right-fixed";
 
 // 5. layout
 @import "layout/header";
