cgs - 1200px일 때 layout-right-fixed 위치 조정

--- a/src/assets/styles/component/_right-fixed.scss
+++ b/src/assets/styles/component/_right-fixed.scss
@@ -5,6 +5,7 @@
       position: static;
       width: 100%;
       transform: none;
+      margin-bottom: 20px;
 
       .fixed-con-container {
         position: static;
