cgs - 해당 페이지 분기처리 수정

--- a/src/assets/styles/page/_mypage-my-info.scss
+++ b/src/assets/styles/page/_mypage-my-info.scss
@@ -282,6 +282,8 @@
       font-size: rem(16);
       font-weight: 400;
       color: #171820;
+      line-height: 1.4;
+      letter-spacing: -0.5px;
     }
   }
 }
