--- a/src/assets/styles/page/_mypage-dashboard.scss
+++ b/src/assets/styles/page/_mypage-dashboard.scss
@@ -234,6 +234,10 @@
       padding: 5px;
       background-color: #fff;
       margin-bottom: 10px;
+
+      @include media(1600px) {
+        overflow-x: hidden;
+      }
     }
 
     .select-ttl-grp {
