cgs - wating -> waiting 오타 수정

--- a/src/assets/styles/page/_mypage-my-info.scss
+++ b/src/assets/styles/page/_mypage-my-info.scss
@@ -221,7 +221,7 @@
 
 
 // 마이페이지 - 대기중(그룹 강퇴 당하거나 승인 전)
-[mypage="wating-page"] {
+[mypage="waiting-page"] {
 
   .waiting-cont-wrap {
     background-color: #fff;
