--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -1235,3 +1235,9 @@ body{
     }
   }
 }
+
+// 공통) 펙트체크 요청하기(etpr-profile-request-ftck) 테이블표 관련 layout 별도 적용
+.layout-center {
+  width: 340px;
+  margin: 0 auto;
+}
